Fix when loading simulation artifacts for the reference structure (SubRun 0)